<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColorBackground"
    tools:context="com.cst.whut.srmis.LoginActivity">
<android.support.constraint.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.13" />

    <RelativeLayout
        android:id="@+id/loginAccount_rl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.19">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginAccount_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#98DAE8">
            <EditText
                android:id="@+id/loginAccount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/skyBlue"
                android:textSize="20sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/login_et_bg"
                android:textCursorDrawable="@drawable/editcursor"
                android:textColorHint="#98DAE8"
                android:lines="1"
                android:maxLength="15"
                android:gravity="center"
                android:hint="@string/Account"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>
        <!--可添加图标-->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginPassword_rl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginAccount_rl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginPassword_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#98DAE8">
            <EditText
                android:id="@+id/loginPassword_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/skyBlue"
                android:textSize="20sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/login_et_bg"
                android:textCursorDrawable="@drawable/editcursor"
                android:textColorHint="#98DAE8"
                android:lines="1"
                android:maxLength="15"
                android:gravity="center"
                android:hint="@string/Password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <!--可添加图标-->
    </RelativeLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cpb_iconComplete="@drawable/login_success"
        app:cpb_iconError="@drawable/login_false"
        app:cpb_textIdle="@string/LOGIN"
        app:cpb_selectorComplete="@drawable/complete_state_selector"
        app:cpb_selectorError="@drawable/error_state_selector"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_cornerRadius="48dp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/LOGIN"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword_rl"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false" />
    <TextView
        android:id="@+id/forgetPassword_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/忘记密码"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>